syntax = "proto3";
option go_package = "github.com/treevese/lakefs/graveler/committed/tree";


package tree;

message PartData {
	bytes min_key = 1;
	bytes max_key = 2;
	int64 estimated_size = 3;
	bool  break_on_hash = 4;
}
